<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/management"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/people"
            android:title="@string/nmt1" />
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/tear_off_calendar"
            android:title="@string/nmt2" />
        <item
            android:id="@+id/nav_pharmacy"
            android:icon="@drawable/pharmacy_shop"
            android:title="@string/nmt3" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/health_graph"
            android:title="@string/nmt4" />
    </group>

    <group
        android:id="@+id/activity"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/open_pane"
            android:title="@string/nmt5" />
    </group>
</menu>